<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Geo Discoverer</string>
	<string name="fatal_home_directory_creation">Could not create home directory!</string>
	<string name="home_directory">GeoDiscoverer</string>
	<string name="button_label_exit">Exit</string>
	<string name="fatal_gdcore_initialization">Could not initialize the native core!</string>
	<string name="busy_waiting_for_external_storage">Waiting for mounted and writable external storage</string>
	<string name="fatal_log_directory_creation">Could not create log directory!</string>
	<string name="log_directory">GeoDiscoverer/log</string>
	<string name="button_label_ok">OK</string>
	<string name="button_label_donate">Donate</string>
  <string name="button_label_help">Help</string>
  <string name="preferences">Preferences</string>
	<string name="remove_routes">Remove routes</string><string name="add_tracks_as_routes">Add tracks as routes</string>
	<string name="track_as_route_selection_question">Select the tracks to copy to the route directory:</string>
	<string name="route_remove_selection_question">Select the routes to delete from the route directory:</string>
  <string name="log_selection_question">Select the logs to send to the developer:</string>
	<string name="finished">Finished</string>
	<string name="cancel">Cancel</string>
	<string name="copying_tracks">Copying tracks from track to route directory</string><string name="removing_routes">Removing routes from route directory</string>
	<string name="starting_core_object">Starting core&#8230;</string>
	<string name="restarting_core_object">Restarting core&#8230;</string>
	<string name="stopping_core_object">Stopping core&#8230;</string>
	<string name="reset">Reset</string>
	<string name="no">No</string>
	<string name="yes">Yes</string>
	<string name="reset_question">Are you sure that you want to reset all preferences to their default values?</string>
	<string name="exit">Exit</string>
	<string name="file_does_not_exist">File does not exist!</string>
	<string name="copy_route_question">Copy file &lt;%s&gt; to route directory?</string>
	<string name="overwrite_route_question">Overwrite file &lt;%s&gt; in route directory?</string>
	<string name="copying_file">Copying file &lt;%s&gt; to route directory</string>
	<string name="unsupported_path">The path &lt;%s&gt; is not supported!</string>
	<string name="unsupported_host">The host &lt;%s&gt; is not supported!</string>
	<string name="unsupported_scheme">The scheme &lt;%s&gt; is not supported!</string>
	<string name="unsupported_intent">This intent is not supported (has no stream)!</string>
	<string name="unsupported_google_map_query">The Google Maps query is not supported!</string>
	<string name="location_not_found">Can not find location &lt;%s&gt;</string>
	<string name="cannot_copy_file">Can not copy file &lt;%1$s&gt; to &lt;%2$s&gt;!</string>
	<string name="cannot_remove_file">Can not remove file &lt;%s&gt;!</string>
	<string name="notification_service_in_foreground_message">Taking care of your position.</string>
	<string name="notification_title">Geo Discoverer</string>
	<string name="no_home_dir">Home directory &lt;%s&gt; can not be created!</string>
	<string name="no_external_storage">Can not start Geo Discoverer because external storage is not available!</string>
	<string name="show_messages">Show messages</string>
	<string name="hide_messages">Hide messages</string>
  <string name="toggle_messages">Toggle messages</string>
	<string name="set_target_at_map_center">Set target at map center</string>
	<string name="set_target_at_location">Set target at location</string>
	<string name="hide_target">Hide target</string>
	<string name="context_menu_title">Map actions</string>
	<string name="show_target">Show target</string>
	<string name="manually_entered_address">Manually entered address</string>
	<string name="address_dialog_title">Set target at address</string>
	<string name="address_dialog_message">Enter the address to find in a single line:</string>
  <string name="address_dialog_hint">Alexanderplatz 1, Berlin</string>
  <string name="device_admin_description">Allows Geo Discoverer to turn off the screen by locking it.</string>
	<string name="device_admin_not_enabled">Screen can not be locked: Please allow GeoDiscoverer to act as a device admin in the system settings.</string>
	<string name="replace_map_folder_question">Create map folder &lt;%1$s&gt; that uses map archive &lt;%2$s&gt;? There exists already a map folder that will be replaced.</string>
	<string name="create_map_folder_question">Create map folder &lt;%1$s&gt; that uses map archive &lt;%2$s&gt;?</string>
	<string name="cannot_create_map_folder">Map folder &lt;%1$s&gt; could not be created!</string>
	<string name="navigation_drawer_menu_entry_icon_description">Icon of the menu entry</string>
  <string name="navigation_drawer_app_info_icon_description">Image showing the icon of the app</string>
  <string name="navigation_drawer_header_background_description">Header background image showing mountains</string>
  <string name="view_map_splash_image_description">Image showing the icon of the app</string>
  <string name="show_legend">Show legend</string>
  <string name="map_has_no_legend">Map &lt;%1$s&gt; has no legend! You can add one by creating the picture &lt;%2$s&gt;.</string>
  <string name="download_manager_not_available">Your Android version does not support the download manager. Please download the file manually.</string>
  <string name="downloading_gpx_to_route_directory">Downloading GPX to route directory of GeoDiscoverer.</string>
  <string name="skipping_download">Skipping download because there is already one ongoing.</string>
  <string name="download_failed">Downloading of file &lt;%1$s&gt; failed!</string>
  <string name="cannot_read_uri">Could not read contents of URI &lt;%1$s&gt;!</string>
  <string name="route_name_dialog_title">Import route</string>
  <string name="route_name_dialog_message">Enter the name of the route:</string>
  <string name="route_exists">Existing route will be overwritten.</string>
  <string name="importing_route">Importing route &lt;%1$s&gt;</string>
  <string name="cannot_import_route">Could not import route &lt;%1$s&gt; (I/O error)!</string>
  <string name="import_map">Import map</string>
  <string name="nav_drawer_hint">Swipe from the left edge to the right to open menu.</string>
  <string name="importing_external_map_archives">Importing all map archives related to &lt;%1$s&gt;</string>
  <string name="got_it">Got it!</string>
  <string name="duration">Duration</string>
  <string name="distance">Distance</string>
  <string name="visible_on_map">Visible on map</string>
  <string name="hidden_on_map">Hidden on map</string>
  <string name="tts_cannot_init">Could not init Text-To-Speech engine</string>
  <string name="tts_cannot_set_language">Could not set Text-To-Speech language</string>
  <string name="tts_cannot_add_alert_earcon">Could not add Text-To-Speech alert earcon</string>
  <string name="tts_locale">en</string>
  <string name="tts_turn_left">Please turn left in %1$s!</string>
  <string name="tts_turn_right">Please turn right in %1$s!</string>
  <string name="tts_off_route">You are %1$s away from your route!</string>
  <string name="tts_meters">meters</string>
  <string name="tts_kilometers">kilometers</string>
  <string name="tts_megameters">megameters</string>
  <string name="tts_miles">miles</string>
  <string name="tts_yards">yards</string>
  <string name="help">Help</string>
  <string name="send_logs">Send logs</string>
  <string name="send_logs_failed">Send logs failed: %1$s</string>
  <string name="crash_dialog_title">Geo Discoverer has crashed</string>
  <string name="crash_dialog_text">Sorry for that! Please help the developer to fix this. This dialog sends a bug report with collected information to him.</string>
  <string name="crash_dialog_comment_text">You can add an optional comment that explains the bug.</string>
  <string name="crash_dialog_email_text">If you add your email address, the author can contact you with further questions.</string>
  <string name="crash_dialog_ok_toast_text">Thank you!</string>
  <string name="crash_toast_text">Creating crash report!</string>
  <string name="crash_notification_ticker_text">Crash reports available for Geo Discoverer!</string>
  <string name="crash_notification_title">Geo Discoverer crashed</string>
  <string name="crash_notification_text">Please touch to send a report</string>
  <string name="welcome_dialog_title">Welcome to Geo Discoverer!</string>
  <string name="welcome_dialog_message">Geo Discoverer is a free navigation app. It comes with an extensive help that explains all features. If you like this app, please donate to support the development! </string>
  <string-array name="donation_google_catalog_values">
	  <item>1 €</item>
	  <item>2 €</item>
	  <item>3 €</item>
	  <item>5 €</item>
	  <item>10 €</item>
	  <item>20 €</item>
  </string-array>
  <string name="support_geodiscoverer">Support Geo Discoverer!</string>
  <string name="force_map_redownload">Refresh visible map</string>
  <string name="opengles20_required">The app is not compatible to this device because it does not support OpenGL ES 2.0.</string>
  <string name="continue_or_new_track_question">Shall the current track be continued or shall a new track be started?</string>
  <string name="new_track">New track</string>
  <string name="contine_track">Continue track</string>
  <string name="map_layer_selection_question">Select the layer to display:</string>
  <string name="map">Map</string>
  <string name="routes">Routes</string>
  <string name="general">General</string>
  <string name="debug">Debug</string>
</resources>
