<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/toggle_messages" android:title="@string/show_messages" android:icon="@android:drawable/ic_menu_info_details"></item>
    <item android:id="@+id/preferences" android:title="@string/preferences" android:icon="@android:drawable/ic_menu_preferences"></item>
    <item android:id="@+id/add_tracks_as_routes" android:title="@string/add_tracks_as_routes" android:icon="@android:drawable/ic_menu_add" />
    <item android:id="@+id/remove_routes" android:title="@string/remove_routes" android:icon="@android:drawable/ic_menu_delete" />
    <item android:id="@+id/reset" android:title="@string/reset" android:icon="@android:drawable/ic_menu_revert"></item>
    <item android:id="@+id/exit" android:title="@string/exit" android:icon="@android:drawable/ic_menu_close_clear_cancel"></item>
</menu>
